--- a/lab_python/python06_list.ipynb
+++ b/lab_python/python06_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPEozSOLxnl78B5AxW1QTm9",
+      "authorship_tag": "ABX9TyPkFNrUWMC/p2xvHhJvsxng",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,13 +54,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "w1ALGyElvaz_",
-        "outputId": "4922bb78-dd95-4493-d1e7-3a6594d8ae8f"
+        "outputId": "661cf130-0089-41c4-8075-360a5214affb"
       },
       "outputs": [
         {
@@ -92,9 +92,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2nITo7clx5Yv",
-        "outputId": "5d7fcb8d-b11e-4a3e-d3f8-08003316640f"
+        "outputId": "57ac3ce3-65f7-4028-f7d8-49f7e5c0bf6e"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,9 +129,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ilp8JHGXyRfS",
-        "outputId": "9c51d04c-0c18-4d9b-8916-1207aaa2e893"
+        "outputId": "0206be59-1ef1-4fd9-c91c-2784c8fc8688"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -155,9 +155,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HAbbzIIm0Ivo",
-        "outputId": "f45fccee-f4e5-4682-bb8c-46a87fab1072"
+        "outputId": "8092023e-6bf9-4c6b-c193-b36a613c85b8"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -167,7 +167,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -181,9 +181,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "REK2TlKA0UhA",
-        "outputId": "4710e513-2144-47bf-857b-ea4e23ac811d"
+        "outputId": "0caabd39-f388-4139-b043-3d96af1cc056"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +193,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -207,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KJu6hm0d01yJ",
-        "outputId": "1a562eab-fc9a-44fc-db74-51f73198ce22"
+        "outputId": "a6a18584-d2e0-4436-ccec-ec168dd5c4ec"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -233,9 +233,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8KoltY1I1JbI",
-        "outputId": "2c31ae15-c624-4b39-f887-015b3ed0fbba"
+        "outputId": "67326da7-b823-4b91-e642-7f559d4e55aa"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -259,9 +259,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vnlNHAWD1qaY",
-        "outputId": "2729ff2a-1f62-48a5-8e19-4e8252c1688d"
+        "outputId": "c3f8f4aa-9aca-4c80-a5a0-a827fb989129"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +271,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -286,9 +286,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yH6BdLdR1-tI",
-        "outputId": "6afbee0e-eb1e-4413-d55b-eaf5bba4da8f"
+        "outputId": "5b0af63f-93de-418a-c0f6-3b2f064c21eb"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,9 +326,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qOi3BT8I8X5S",
-        "outputId": "dbc59a4b-2d7b-4044-c9d1-b4eda43ccb0e"
+        "outputId": "d68cc19f-cafd-493a-c9c0-89e5abdbdce6"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +338,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -352,9 +352,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WPvpkWBi8ZiT",
-        "outputId": "b5d4fa0d-8450-4926-c180-2ee955eac037"
+        "outputId": "353cf9a0-4a12-4682-cf85-bd349f4a05de"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +364,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -378,9 +378,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sC0M_4j98ldT",
-        "outputId": "2411e2a5-71fa-4c47-d69f-3f23ae9de784"
+        "outputId": "082ddd26-e901-47bb-b285-90152464a4cb"
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -390,7 +390,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 12
         }
       ]
     },
@@ -404,9 +404,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7eZiBsC79cwe",
-        "outputId": "5e42b2d7-dcf6-475a-9d21-6d33b09426a3"
+        "outputId": "50678b89-3bda-4374-d16c-0e8071832462"
       },
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +416,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 13
         }
       ]
     },
@@ -430,9 +430,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c46lK9oS9sqS",
-        "outputId": "4ab9fc03-4ceb-4f69-ebf7-f04782644f01"
+        "outputId": "4f1b322c-fe5b-4c53-b790-2d5f454c4baa"
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +442,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 14
         }
       ]
     },
@@ -456,9 +456,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gGHOO9CT-ATz",
-        "outputId": "91542a63-9291-40d5-fe07-f144474a6308"
+        "outputId": "744c7d51-6a7c-4b7f-b419-8b8b1207eedc"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -468,7 +468,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 15
         }
       ]
     },
@@ -482,9 +482,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eQn5xJHz-9f9",
-        "outputId": "12763ab1-2373-42ec-e485-a50b7fb6b8d8"
+        "outputId": "0febd447-17f6-4f9c-a349-c277c51dc0ce"
       },
-      "execution_count": 20,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -494,7 +494,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 16
         }
       ]
     },
@@ -508,9 +508,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WJ-hNL25_fY8",
-        "outputId": "ce4bcc3d-dcd0-4bd5-d9da-bba4fd66632b"
+        "outputId": "d398d501-34a8-441e-de48-05bf80b169f7"
       },
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,7 +520,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 17
         }
       ]
     },
@@ -545,7 +545,7 @@
       "metadata": {
         "id": "_VqD6jZUAFu1"
       },
-      "execution_count": 22,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -559,9 +559,9 @@
           "height": 39
         },
         "id": "aZ9S6j29AKFt",
-        "outputId": "3532edb5-40ad-4375-f632-feee48795c2d"
+        "outputId": "90ccb045-54e7-4bba-9ba7-f37c561970ae"
       },
-      "execution_count": 24,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,7 +574,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 19
         }
       ]
     },
@@ -589,9 +589,9 @@
           "height": 39
         },
         "id": "H6AoPzY2ApQ1",
-        "outputId": "ead36dc0-076f-42ee-d202-521e5467c8aa"
+        "outputId": "041d2cc8-32db-4e82-8b09-94f6d8138117"
       },
-      "execution_count": 26,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -604,7 +604,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 20
         }
       ]
     },
@@ -619,9 +619,9 @@
           "height": 39
         },
         "id": "XfFr190jA28L",
-        "outputId": "9410665a-d484-4125-fbee-9e1d8c9725a9"
+        "outputId": "1a84d4b7-72d9-4602-b241-6a88c57fb610"
       },
-      "execution_count": 28,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -634,7 +634,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 21
         }
       ]
     },
@@ -649,9 +649,9 @@
           "height": 39
         },
         "id": "dsRPtQP_BFsV",
-        "outputId": "4385869a-d4e5-4850-c8cc-19ed5588d18a"
+        "outputId": "d166a3db-ae3b-4de7-bd51-ae71d40e2477"
       },
-      "execution_count": 30,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +664,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 22
         }
       ]
     },
@@ -691,9 +691,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hlr_EGOeH8N_",
-        "outputId": "14e3214d-37d6-4f26-8000-93fb7089ae41"
+        "outputId": "b68dfdc9-492a-47d6-c52c-631a5549931a"
       },
-      "execution_count": 47,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,9 +715,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D6k0Fe_ZILA9",
-        "outputId": "c2b5dd00-cfff-4737-8f52-4a1c8efd4c20"
+        "outputId": "877624a3-27c0-41d5-e595-dbd8776b6730"
       },
-      "execution_count": 48,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -727,7 +727,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 24
         }
       ]
     },
@@ -741,9 +741,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gDkPzENlIQw3",
-        "outputId": "930cd0e7-8428-4d6b-8314-b5f4399c36e4"
+        "outputId": "34974e55-000b-41e2-e287-5cf2389da28c"
       },
-      "execution_count": 49,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,9 +753,230 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 25
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 리스트의 기능들 - 메서드(함수)"
+      ],
+      "metadata": {
+        "id": "FaAn6Hv8mKet"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 원소 추가"
+      ],
+      "metadata": {
+        "id": "1zagBbCVmWTV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1, 2, 3, 4, 5]\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CoEVBSyYmauc",
+        "outputId": "a5f46c59-fd25-4200-c368-48adcff386a6"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list.append(val): list의 끝에 val을 아이템으로 추가.\n",
+        "numbers.append(100)\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N972fYd_mkwX",
+        "outputId": "1e76d560-4669-49e9-9678-669ccbacb7cb"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 100]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list.insert(idx, val): list의 인덱스 idx 앞에 값 val을 삽입(추가).\n",
+        "numbers.insert(0, -1)\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6tb7Rt8Sn1hf",
+        "outputId": "e8b1bb41-0756-466f-9dc8-4af2c356a177"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-1, 1, 2, 3, 4, 5, 100]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers.insert(2, -2)\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lpkfTXm1pFa4",
+        "outputId": "bd0b5efb-b3ac-4841-8647-2f9149964077"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-1, 1, -2, 2, 3, 4, 5, 100]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list.extend(iterable): iterable 안에 있는 아이템들을 \"하나씩\" 리스트의 끝에 추가.\n",
+        "numbers.extend([11, 12, 13])\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VkkR-lSspbj3",
+        "outputId": "92901222-d2a1-49d8-862b-4c37f059fbd1"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-1, 1, -2, 2, 3, 4, 5, 100, 11, 12, 13]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# extend() 메서드 기능은 + 연산 결과와 같다.\n",
+        "numbers = numbers + [21, 22, 23]\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k4aoL45zqtKJ",
+        "outputId": "08903e20-88e6-49b8-b446-c20a40227fd4"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-1, 1, -2, 2, 3, 4, 5, 100, 11, 12, 13, 21, 22, 23]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# (주의) append와 extend의 차이점!\n",
+        "numbers.append([101, 102, 103])\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "04iWyyxCrC3A",
+        "outputId": "a57df561-32ce-4c56-b8bc-34de7e3ad80e"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-1, 1, -2, 2, 3, 4, 5, 100, 11, 12, 13, 21, 22, 23, [101, 102, 103]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gGE4TjD6r4yA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
