list methods. for-in list.

--- a/lab_python/python06_list.ipynb
+++ b/lab_python/python06_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPkFNrUWMC/p2xvHhJvsxng",
+      "authorship_tag": "ABX9TyN/k8DIAQagKFBv+7vByoUC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -970,10 +970,463 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 원소 삭제"
+      ],
+      "metadata": {
+        "id": "65_OVZdpwZdY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1, 2, 3, 10, 20, 30, 5, 6, 7]\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gGE4TjD6r4yA",
+        "outputId": "145c7018-7b2b-4bff-ea9e-79b7303e8079"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 10, 20, 30, 5, 6, 7]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list.pop(): list의 가장 마지막 아이템을 삭제.\n",
+        "numbers.pop()\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1uXBDeKvwpvS",
+        "outputId": "da370047-5d48-43cf-8be1-e56074afed8a"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 10, 20, 30, 5, 6]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list.pop(index): list에서 index 위치의 아이템을 삭제.\n",
+        "numbers.pop(0)  # 인덱스 0 위치의 아이템(첫번째 아이템)을 삭제.\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uyTUcMyTw3Lp",
+        "outputId": "ab8eff4d-eed7-47a3-e78d-cbd09edad1e8"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 3, 10, 20, 30, 5, 6]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list.remove(value): list에서 첫번째로 등장하는 값 value를 삭제.\n",
+        "numbers.remove(2)\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pnys2QchxUiq",
+        "outputId": "ec6cbfb4-d006-4d77-fcfc-fb7c6ffc56bf"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 10, 20, 30, 5, 6]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test = [1, 2, 3] * 3\n",
+        "print(test)  # 삭제 전\n",
+        "test.remove(2)\n",
+        "print(test)  # 삭제 후"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1tlEuHbUxzML",
+        "outputId": "caeabb3b-4893-4daa-9c87-35fef61a03a1"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 1, 2, 3, 1, 2, 3]\n",
+            "[1, 3, 1, 2, 3, 1, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list.clear(): list의 모든 아이템들을 삭제.\n",
+        "numbers.clear()\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xLW9i0vwybrd",
+        "outputId": "c09914e3-7390-4c29-e5f5-dbbbaf1d2c46"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 원소 변경"
+      ],
+      "metadata": {
+        "id": "J8-HJ4PUzAJJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1, 2, 3]\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qiLlsVCKyzzp",
+        "outputId": "27a93564-fd9a-4abd-d5e5-c09a01565e0b"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list[index] = value\n",
+        "numbers[1] = 100\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MSjSlzh-zKJ7",
+        "outputId": "747cf995-1e21-487f-907e-7c4333ffe9e0"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 100, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 원소 개수 세기"
+      ],
+      "metadata": {
+        "id": "pxuGtBvGz3Eb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1, 2, 3, 4, 5, 6, 1, 2, 1, 2, 3]\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T-pFTNnQzVcZ",
+        "outputId": "cd23972b-aba0-4196-dacd-d49f55e5ec4b"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6, 1, 2, 1, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list.count(value): list에서 value가 몇 번 등장하는 지 개수를 반환.\n",
+        "numbers.count(3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yBFYjekf0F9y",
+        "outputId": "53ddfd22-70c2-44c7-e4b9-c6dc2d64d76c"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# len(iterable) 함수: iterable의 아이템 개수를 반환.\n",
+        "len(numbers)  # 리스트 numbers의 아이템 개수"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GQBwmAI-0I-q",
+        "outputId": "9a3f525f-8c54-41ae-9b71-7621e0847db8"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len('Hello')  # 문자열 'Hello'의 문자 개수."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7LH4aM6p1FrB",
+        "outputId": "3a79fe78-3881-4e7b-a36f-a3f0edf7625f"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# list와 for 반복문"
+      ],
+      "metadata": {
+        "id": "kKe9mM3C1a4x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "languages = ['SQL', 'Python', 'R']\n",
+        "for x in languages:\n",
+        "    print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rDTY25B81dRa",
+        "outputId": "7ffa435f-fba2-4453-af24-b96f36014e29"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SQL\n",
+            "Python\n",
+            "R\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# list에서 인덱스와 값을 같이 꺼내서 반복(iteration)을 하고 싶을 때.\n",
+        "for index, value in enumerate(languages):\n",
+        "    print(index, ':', value)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_Vu4kjI02WXU",
+        "outputId": "299e1bec-51be-4d09-9832-bb046b668215"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 : SQL\n",
+            "1 : Python\n",
+            "2 : R\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 연습문제"
+      ],
+      "metadata": {
+        "id": "UwFWMGaI32QL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex. 1\n",
+        "\n",
+        "*   빈 리스트(empty list) numbers를 만듦.\n",
+        "*   리스트 numbers에 0 이상 100 미만의 정수 난수 10개를 저장(append).\n",
+        "*   리스트 numbers를 출력.\n",
+        "*   numbers의 원소들 중에서 짝수들만 골라낸 새로운 리스트 evens를 만들고 출력.\n",
+        "*   numbers의 원소들 중에서 홀수들만 골라낸 새로운 리스트 odds를 만들고 출력.\n"
+      ],
+      "metadata": {
+        "id": "5OekjCVl346C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "PygacvTb3Hjc"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gGE4TjD6r4yA"
+        "id": "3XS6rapC5acf"
       },
       "execution_count": null,
       "outputs": []
