list와 for 반복문 연습문제

--- a/lab_python/python06_list.ipynb
+++ b/lab_python/python06_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN/k8DIAQagKFBv+7vByoUC",
+      "authorship_tag": "ABX9TyPsqEiW10VRjNSAczZSwJCM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1427,6 +1427,29 @@
       "source": [],
       "metadata": {
         "id": "3XS6rapC5acf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex. 2\n",
+        "\n",
+        "*   integers 이름의 빈 리스트를 만듦.\n",
+        "*   리스트 integers에 -10 이상 10 이하의 정수 난수 10개를 저장하고 출력.\n",
+        "*   is_positives 이름의 빈 리스트를 만듦.\n",
+        "*   integers의 원소가 양수이면 True, 그렇지 않으면 False를 is_positives에 저장하고 출력.\n"
+      ],
+      "metadata": {
+        "id": "_2GYGm-75wTz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eomTZhVi57Kj"
       },
       "execution_count": null,
       "outputs": []
