list와 for 반복문 연습문제

--- a/lab_python/python06_list.ipynb
+++ b/lab_python/python06_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPsqEiW10VRjNSAczZSwJCM",
+      "authorship_tag": "ABX9TyNIu719RR39xXF5LMsdAKsC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1450,6 +1450,30 @@
       "source": [],
       "metadata": {
         "id": "eomTZhVi57Kj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ex. 3\n",
+        "\n",
+        "아래 langueage 리스트가 저장하고 있는 문자열의 길이들을 저장하는 리스트 lang_lengths를 만들고 출력하세요.\n",
+        "\n",
+        "```\n",
+        "languages = ['SQL', 'Python', 'R', 'JavaScript']\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "VqtpXO3h6iib"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "73SZnRTc6-IL"
       },
       "execution_count": null,
       "outputs": []
