list, for 반복문 연습문제

--- a/lab_python/python06_list.ipynb
+++ b/lab_python/python06_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNIu719RR39xXF5LMsdAKsC",
+      "authorship_tag": "ABX9TyNMwcnEW1nkowP8tvLyN4rb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1424,12 +1424,60 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numbers = []  # 빈 리스트 만듦.\n",
+        "for _ in range(10):  # 10번 반복\n",
+        "    # r = random.randrange(100)  # random.randrange(0, 100), 난수 만듦\n",
+        "    # numbers.append(r)  # 난수를 리스트에 끝에 추가.\n",
+        "    numbers.append(random.randrange(100))\n",
+        "\n",
+        "print(numbers)"
+      ],
       "metadata": {
-        "id": "3XS6rapC5acf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3XS6rapC5acf",
+        "outputId": "7fc8a760-de24-4031-de40-41e50a4fb3aa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 48, 0, 41, 87, 23, 12, 36, 24, 41]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "evens = []  # 짝수들만 저장하기 위한 빈 리스트\n",
+        "for x in numbers:  # 리스트 numbers의 아이템들을 처음부터 끝까지 순서대로 반복하면서\n",
+        "    if x % 2 == 0:  # 그 아이템이 짝수이면\n",
+        "        evens.append(x)  # 리스트 evens에 아이템을 저장.\n",
+        "\n",
+        "print(evens)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oQrnoZ_yFZqB",
+        "outputId": "3e76a97a-940d-4bb8-dcf3-b7c79966dd6a"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 48, 0, 12, 36, 24]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1457,7 +1505,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Ex. 3\n",
+        "## Ex. 3\n",
         "\n",
         "아래 langueage 리스트가 저장하고 있는 문자열의 길이들을 저장하는 리스트 lang_lengths를 만들고 출력하세요.\n",
         "\n",
